[gd_scene load_steps=8 format=3 uid="uid://dtfhd601lsqa7"]

[ext_resource type="Texture2D" uid="uid://nx3tjh03dga8" path="res://Assets/Art/DashSmashEnemy.png" id="1_8e2t7"]
[ext_resource type="Script" path="res://Assets/Scripts/DashSmashEnemy.gd" id="1_xb7ov"]
[ext_resource type="Script" path="res://Assets/Scripts/MeleeWeaponRaycastCollider.gd" id="2_03b1j"]
[ext_resource type="Script" path="res://Assets/Scripts/VisionSensor.gd" id="2_wycji"]
[ext_resource type="Script" path="res://Assets/Scripts/Trail.gd" id="3_5q65g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dfrsi"]
radius = 71.0
height = 232.0

[sub_resource type="Curve" id="Curve_un6cq"]
_data = [Vector2(0, 0), 0.0, 0.733974, 0, 0, Vector2(1, 0), -0.331116, 0.0, 0, 0]
point_count = 2

[node name="DashSmashEnemy" type="RigidBody2D"]
mass = 5.0
script = ExtResource("1_xb7ov")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-17, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dfrsi")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.18, 0.18)
texture = ExtResource("1_8e2t7")

[node name="Smasher" type="Node2D" parent="."]

[node name="RaycastCollider" type="Node2D" parent="Smasher" node_paths=PackedStringArray("excludeCollision")]
script = ExtResource("2_03b1j")
excludeCollision = [NodePath("../..")]
weaponDamage = 30
weaponKnockback = 2000.0

[node name="RaycastNode" type="Node2D" parent="Smasher/RaycastCollider"]
position = Vector2(145, 0)

[node name="ThrustTrail" type="Line2D" parent="Smasher/RaycastCollider/RaycastNode"]
width = 60.0
width_curve = SubResource("Curve_un6cq")
default_color = Color(0.666667, 0, 0, 0.631373)
script = ExtResource("3_5q65g")
forceTipAlignment = false

[node name="RaycastNode2" type="Node2D" parent="Smasher/RaycastCollider"]
position = Vector2(134, -35)
rotation = 1.5708

[node name="ThrustTrail" type="Line2D" parent="Smasher/RaycastCollider/RaycastNode2"]
width = 60.0
width_curve = SubResource("Curve_un6cq")
default_color = Color(0.666667, 0, 0, 0.631373)
script = ExtResource("3_5q65g")
forceTipAlignment = false

[node name="RaycastNode3" type="Node2D" parent="Smasher/RaycastCollider"]
position = Vector2(134, 35)
rotation = 1.5708

[node name="ThrustTrail" type="Line2D" parent="Smasher/RaycastCollider/RaycastNode3"]
width = 60.0
width_curve = SubResource("Curve_un6cq")
default_color = Color(0.666667, 0, 0, 0.631373)
script = ExtResource("3_5q65g")
forceTipAlignment = false

[node name="RaycastNode4" type="Node2D" parent="Smasher/RaycastCollider"]
position = Vector2(117, -13)
rotation = 1.5708

[node name="ThrustTrail" type="Line2D" parent="Smasher/RaycastCollider/RaycastNode4"]
width = 60.0
width_curve = SubResource("Curve_un6cq")
default_color = Color(0.666667, 0, 0, 0.631373)
script = ExtResource("3_5q65g")
forceTipAlignment = false

[node name="RaycastNode5" type="Node2D" parent="Smasher/RaycastCollider"]
position = Vector2(117, 13)
rotation = 1.5708

[node name="ThrustTrail" type="Line2D" parent="Smasher/RaycastCollider/RaycastNode5"]
width = 60.0
width_curve = SubResource("Curve_un6cq")
default_color = Color(0.666667, 0, 0, 0.631373)
script = ExtResource("3_5q65g")
forceTipAlignment = false

[node name="RaycastNode6" type="Node2D" parent="Smasher/RaycastCollider"]
position = Vector2(101, -60)
rotation = 1.5708

[node name="ThrustTrail" type="Line2D" parent="Smasher/RaycastCollider/RaycastNode6"]
width = 60.0
width_curve = SubResource("Curve_un6cq")
default_color = Color(0.666667, 0, 0, 0.631373)
script = ExtResource("3_5q65g")
forceTipAlignment = false

[node name="RaycastNode7" type="Node2D" parent="Smasher/RaycastCollider"]
position = Vector2(101, 60)
rotation = 1.5708

[node name="ThrustTrail" type="Line2D" parent="Smasher/RaycastCollider/RaycastNode7"]
width = 60.0
width_curve = SubResource("Curve_un6cq")
default_color = Color(0.666667, 0, 0, 0.631373)
script = ExtResource("3_5q65g")
forceTipAlignment = false

[node name="VisionSensor" type="Area2D" parent="."]
monitorable = false
script = ExtResource("2_wycji")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionSensor"]
position = Vector2(-109, 0)
polygon = PackedVector2Array(-130, -200, -130, 200, 1500, 500, 1500, -500)
